<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        android:layout_alignEnd="@+id/btn1"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_alignStart="@+id/btn2"
        android:layout_alignEnd="@+id/btn2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:text="@string/btn3" />
</RelativeLayout>